--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+.loadingSpinner {
+  padding: 25px;
+  background: rgb(0, 0, 0, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
